--- a/OpenGLPractice/OpenGLPractice.csproj
+++ b/OpenGLPractice/OpenGLPractice.csproj
@@ -49,13 +49,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Camera.cs" />
+    <Compile Include="Utilities\Camera.cs" />
     <Compile Include="cOGL.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="OpenGLForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="OpenGLForm.Designer.cs">
+      <DependentUpon>OpenGLForm.cs</DependentUpon>
     </Compile>
     <Compile Include="GameObjects\Arrow.cs" />
     <Compile Include="GameObjects\Axes.cs" />
@@ -63,11 +63,11 @@
     <Compile Include="GameObjects\CubeWithArrow.cs" />
     <Compile Include="GameObjects\GameObject.cs" />
     <Compile Include="GameObjects\Sphere.cs" />
-    <Compile Include="GLUtilities.cs" />
+    <Compile Include="Utilities\GLUtilities.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Transform.cs" />
-    <Compile Include="Vector3.cs" />
+    <Compile Include="Utilities\Transform.cs" />
+    <Compile Include="Utilities\Vector3.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
