--- a/OpenGLPractice/OpenGLPractice.csproj
+++ b/OpenGLPractice/OpenGLPractice.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GameObjects\Cup.cs" />
+    <Compile Include="GameObjects\GameObjectCreator.cs" />
     <Compile Include="GameObjects\HeliCup.cs" />
     <Compile Include="GameObjects\Rod.cs" />
     <Compile Include="GameObjects\Telescope.cs" />
@@ -63,7 +64,6 @@
     </Compile>
     <Compile Include="GameObjects\Arrow.cs" />
     <Compile Include="GameObjects\Cube.cs" />
-    <Compile Include="GameObjects\CubeWithArrow.cs" />
     <Compile Include="GameObjects\GameObject.cs" />
     <Compile Include="GameObjects\Sphere.cs" />
     <Compile Include="Utilities\GLUtilities.cs" />
@@ -71,6 +71,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\Transform.cs" />
     <Compile Include="Utilities\Vector3.cs" />
+    <EmbeddedResource Include="OpenGLForm.resx">
+      <DependentUpon>OpenGLForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
