--- a/OpenGLPractice/OpenGLPractice.csproj
+++ b/OpenGLPractice/OpenGLPractice.csproj
@@ -33,8 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="OpenGLWrapper">
-      <HintPath>..\OpenGLWrapper.dll</HintPath>
+    <Reference Include="OpenGLWrapper, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\External Libraries\OpenGLWrapper.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -66,11 +67,16 @@
     <Compile Include="GameObjects\Cube.cs" />
     <Compile Include="GameObjects\GameObject.cs" />
     <Compile Include="GameObjects\Sphere.cs" />
+    <Compile Include="Utilities\Matrix3.cs" />
+    <Compile Include="Utilities\Matrix4.cs" />
     <Compile Include="Utilities\GLUtilities.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\Matrix2.cs" />
     <Compile Include="Utilities\Transform.cs" />
+    <Compile Include="Utilities\Vector2.cs" />
     <Compile Include="Utilities\Vector3.cs" />
+    <Compile Include="Utilities\Vector4.cs" />
     <EmbeddedResource Include="OpenGLForm.resx">
       <DependentUpon>OpenGLForm.cs</DependentUpon>
     </EmbeddedResource>
