--- a/OpenGLPractice/OpenGLPractice.csproj
+++ b/OpenGLPractice/OpenGLPractice.csproj
@@ -22,6 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -31,6 +32,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="OpenGLWrapper, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -70,16 +72,18 @@
     <Compile Include="GameObjects\Cube.cs" />
     <Compile Include="GameObjects\GameObject.cs" />
     <Compile Include="GameObjects\Sphere.cs" />
-    <Compile Include="Utilities\Matrix3.cs" />
-    <Compile Include="Utilities\Matrix4.cs" />
+    <Compile Include="GLMath\Matrix3.cs" />
+    <Compile Include="GLMath\Matrix4.cs" />
     <Compile Include="Utilities\GLUtilities.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utilities\Matrix2.cs" />
+    <Compile Include="GLMath\Matrix2.cs" />
+    <Compile Include="Utilities\Light.cs" />
+    <Compile Include="Utilities\Material.cs" />
     <Compile Include="Utilities\Transform.cs" />
-    <Compile Include="Utilities\Vector2.cs" />
-    <Compile Include="Utilities\Vector3.cs" />
-    <Compile Include="Utilities\Vector4.cs" />
+    <Compile Include="GLMath\Vector2.cs" />
+    <Compile Include="GLMath\Vector3.cs" />
+    <Compile Include="GLMath\Vector4.cs" />
     <EmbeddedResource Include="OpenGLForm.resx">
       <DependentUpon>OpenGLForm.cs</DependentUpon>
     </EmbeddedResource>
