improved shadows, improved project architecture, improved animations and added flying animation for HeliCup

--- a/OpenGLPractice/OpenGLPractice.csproj
+++ b/OpenGLPractice/OpenGLPractice.csproj
@@ -52,8 +52,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GameObjects\Axes.cs" />
     <Compile Include="GameObjects\Cup.cs" />
-    <Compile Include="GameObjects\GameObjectCreator.cs" />
+    <Compile Include="Game\GameObjectCollection.cs" />
+    <Compile Include="Game\GameObjectCreator.cs" />
     <Compile Include="GameObjects\HeliCup.cs" />
     <Compile Include="GameObjects\Particles.cs" />
     <Compile Include="GameObjects\Plane.cs" />
@@ -61,7 +63,8 @@
     <Compile Include="GameObjects\PropellerWing.cs" />
     <Compile Include="GameObjects\Rod.cs" />
     <Compile Include="GameObjects\TelescopicPropeller.cs" />
-    <Compile Include="Utilities\Camera.cs" />
+    <Compile Include="Game\IFoldable.cs" />
+    <Compile Include="OpenGLUtilities\Camera.cs" />
     <Compile Include="cOGL.cs" />
     <Compile Include="OpenGLForm.cs">
       <SubType>Form</SubType>
@@ -71,17 +74,19 @@
     </Compile>
     <Compile Include="GameObjects\Arrow.cs" />
     <Compile Include="GameObjects\Cube.cs" />
-    <Compile Include="GameObjects\GameObject.cs" />
+    <Compile Include="Game\GameObject.cs" />
     <Compile Include="GameObjects\Sphere.cs" />
     <Compile Include="GLMath\Matrix3.cs" />
     <Compile Include="GLMath\Matrix4.cs" />
-    <Compile Include="Utilities\GLErrorCatcher.cs" />
+    <Compile Include="Game\GameEnvironment.cs" />
+    <Compile Include="OpenGLUtilities\GLErrorCatcher.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GLMath\Matrix2.cs" />
-    <Compile Include="Utilities\Light.cs" />
-    <Compile Include="Utilities\Material.cs" />
-    <Compile Include="Utilities\Transform.cs" />
+    <Compile Include="OpenGLUtilities\Light.cs" />
+    <Compile Include="OpenGLUtilities\Material.cs" />
+    <Compile Include="OpenGLUtilities\ShadowSurface.cs" />
+    <Compile Include="OpenGLUtilities\Transform.cs" />
     <Compile Include="GLMath\Vector2.cs" />
     <Compile Include="GLMath\Vector3.cs" />
     <Compile Include="GLMath\Vector4.cs" />
