added generic surface gameobject (using math equations), improved controls panel, added ability to control light's position during run time

--- a/OpenGLPractice/OpenGLPractice.csproj
+++ b/OpenGLPractice/OpenGLPractice.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="GameObjects\Axes.cs" />
     <Compile Include="GameObjects\Cup.cs" />
+    <Compile Include="GameObjects\Surface.cs" />
     <Compile Include="GameObjects\WorldCube.cs" />
     <Compile Include="Game\GameObjectCollection.cs" />
     <Compile Include="Game\GameObjectCreator.cs" />
